--- a/src/index.html
+++ b/src/index.html
@@ -17,26 +17,44 @@
 </head>
 <body class="text-center pb-5">
 <h1 class="mt-lg-5">Green Hopper Photography</h1>
-<ul class="nav justify-content-center">
-	<li class="nav-item">
-		<a class="nav-link active" href="/">Welcome</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="/Weddings">Weddings</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="/Lifestyle">Lifestyle</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="/Adventure">Adventure</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="/About">About</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="/Contact">Contact</a>
-	</li>
-</ul>
+<div class="d-none d-md-inline">
+	<ul class="nav justify-content-center">
+		<li class="nav-item">
+			<a class="nav-link active" href="/">Welcome</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/Weddings">Weddings</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/Lifestyle">Lifestyle</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/Adventure">Adventure</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/About">About</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/Contact">Contact</a>
+		</li>
+	</ul>
+</div>
+<div class="d-md-none">
+	<div class="dropdown">
+		<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Welcome
+		</button>
+
+		<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+			<a class="dropdown-item" href="/">Welcome</a>
+			<a class="dropdown-item" href="/Weddings">Weddings</a>
+			<a class="dropdown-item" href="/Lifestyle">Lifestyle</a>
+			<a class="dropdown-item" href="/Adventure">Adventure</a>
+			<a class="dropdown-item" href="/About">About</a>
+			<a class="dropdown-item" href="/Contact">Contact</a>
+		</div>
+	</div>
+</div>
 
 <div id="photo-carousel" class="carousel slide m-auto" data-ride="carousel">
 	<ol class="carousel-indicators">
