--- a/src/About/index.html
+++ b/src/About/index.html
@@ -4,7 +4,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Photography Services in Portland, Maine. Wedding, Family, Adventure.">
+	<meta name="description" content="Photography Services in Portland, Maine. Wedding, Family, Lifestyle, Adventure and Events.">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="/css/style.css">
@@ -56,7 +56,20 @@
 	</div>
 </div>
 
-<footer class="fixed-bottom">Created by <a href="http://greenhopperdesign.com">Green Hopper Design</a></footer>
+<img src="/assets/IMG_2311.JPG" width="600px">
+<div class="about-text text-left">
+<p>I picked up my first camera in elementary school to try to capture my field trip "adventures" and 4th of July fireworks.
+	Growing up in Maine gave me plenty of beautiful landscapes to learn photography as a hobby. In High School I was more
+	comfortable behind the camera than writing articles for the school newspaper so I took on the challenge of photo editor.</p>
+<p>Today I enjoy bringing my love for photography and the technical aspects of creating beautiful and powerful images to
+	the digital realm. I'm available for weddings, events, family and couple photo shoots as well as adventure photography
+	in places that you wouldn't always think to bring a camera. I'd love to hear what project you have in mind and help
+	make it become a reality for you.</p>
+<p class="float-right clearfix mb-5">- Kevin Ferguson<br/>
+&nbsp; Green Hopper Photography</p>
+</div>
+
+<footer class="fixed-bottom clearfix">Created by <a href="http://greenhopperdesign.com">Green Hopper Design</a></footer>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
