--- a/src/Weddings/index.html
+++ b/src/Weddings/index.html
@@ -4,7 +4,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Photography Services in Portland, Maine. Wedding, Family, Adventure.">
+	<meta name="description" content="Photography Services in Portland, Maine. Wedding, Family, Lifestyle, Adventure and Events.">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="/css/style.css">
@@ -54,6 +54,49 @@
 			<a class="dropdown-item" href="/Contact">Contact</a>
 		</div>
 	</div>
+</div>
+
+<div id="photo-carousel" class="carousel slide carousel-fade m-auto" data-ride="carousel">
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img src="/assets/DSC_1401.jpg" class="d-block w-100 m-auto" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_1366.jpg" class="d-block w-100 m-auto" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_0834.jpg" class="d-block w-100 m-auto" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_1142-2.jpg" class="d-block w-100" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_1475.jpg" class="d-block w-100" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_1555.jpg" class="d-block w-100" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_0846.jpg" class="d-block w-100" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_1092.jpg" class="d-block w-100" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_1309.jpg" class="d-block w-100" alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src="/assets/DSC_1383.jpg" class="d-block w-100" alt="...">
+		</div>
+	</div>
+	<a class="carousel-control-prev" href="#photo-carousel" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#photo-carousel" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	</a>
 </div>
 
 <footer class="fixed-bottom">Created by <a href="http://greenhopperdesign.com">Green Hopper Design</a></footer>
