--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Photography Services in Portland, Maine. Wedding, Family, Adventure.">
+	<meta name="description" content="Photography Services in Portland, Maine. Wedding, Family, Lifestyle, Adventure and Events.">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="/css/style.css">
@@ -56,12 +56,7 @@
 	</div>
 </div>
 
-<div id="photo-carousel" class="carousel slide m-auto" data-ride="carousel">
-	<ol class="carousel-indicators">
-		<li data-target="#photo-carousel" data-slide-to="0" class="active"></li>
-		<li data-target="#photo-carousel" data-slide-to="1"></li>
-		<li data-target="#photo-carousel" data-slide-to="2"></li>
-	</ol>
+<div id="photo-carousel" class="carousel slide carousel-fade m-auto" data-ride="carousel">
 	<div class="carousel-inner">
 		<div class="carousel-item active">
 			<img src="/assets/DSC_1366.jpg" class="d-block w-100 m-auto" alt="...">
