--- a/src/About/index.html
+++ b/src/About/index.html
@@ -11,7 +11,7 @@
 
 
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
 
 	<title>Green Hopper Photography - Weddings</title>
 </head>
@@ -41,7 +41,7 @@
 </div>
 <div class="d-md-none">
 	<div class="dropdown">
-		<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		<button class="btn btn-secondary dropdown-toggle mb-5" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			About
 		</button>
 
