--- a/src/Contact/index.html
+++ b/src/Contact/index.html
@@ -13,7 +13,7 @@
 	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
 
-	<title>Green Hopper Photography - Weddings</title>
+	<title>Green Hopper Photography - Contact</title>
 </head>
 <body class="text-center pb-5">
 <h1 class="mt-lg-5">Green Hopper Photography</h1>
